0032518: Visualization - add AIS_InteractiveContext::SetDefaultDrawer()